# erpnext-env-banner

./: MANIFEST.in  README.md  license.txt  pyproject.toml
erpnext_env_banner/: boot.py  hooks.py  modules.txt
erpnext_env_banner/public/css/: env_banner.bundle.css  env_banner.css
erpnext_env_banner/public/js/: env_banner.bundle.js  env_banner.js
