[project]
name = "erpnext_env_banner"
authors = [
    { name = "Joker IT AG", email = "info@joker-it.ch" },
]
description = "Desk-Umgebungsbanner (Prod/Test/Dev) fuer ERPNext / Frappe."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
